<resources>
    <string name="app_name">Gallery</string>
    <string name="_4_30">4:30</string>
    <string name="todo">TODO</string>
    <string name="tab">\t\t\t</string>
    <string name="end_line">\n</string>
    <string name="item_detail_title">Thông tin chi tiết</string>
    <string name="item_detail_added_date">Thời gian chụp</string>
    <string name="item_detail_added_date_sample">Ngày 1 tháng 1 năm 2021</string>
    <string name="item_detail_name">Thông tin tệp</string>
    <string name="item_detail_name_sample">abc.jpg</string>
    <string name="item_detail_specification_sample">100KB 1080x2340px</string>
    <string name="item_detail_path">Đường dẫn</string>
    <string name="item_detail_path_sample">DCIM/abc.jpg</string>
    <string name="item_detail_location">Vị trí</string>
    <string name="item_detail_location_sample">TP HCM</string>
    <string name="delete_item">Xóa ảnh ?</string>
    <string name="no">Không</string>
    <string name="delete">Có</string>
    <string name="retry">Thử lại</string>
    <string name="read_permission_denied">Không đủ quyền</string>
    <string name="your_api_key">AIzaSyBh9XzQ7607i9iMxat2m_gIRo4A3ZX7xfQ</string>
    <string name="title_activity_maps">Map</string>
    <string name="access_token">pk.eyJ1IjoiZHV5bmFtdnQ3OSIsImEiOiJja285M2lhbjkweDNqMndvYXl1b3h1ZTd4In0.kLxmgwRzKyuVRxn01es7Lw</string>
    <string name="user_location_permission_not_granted">Không cho phép</string>
    <string name="user_location_permission_explanation">explanation</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="location_picker_dropped_marker_snippet_no_results">no ressult</string>
    <string name="label_tao_pass">Tạo mật khẩu</string>
    <string name="label_nhap_repass">Nhập lại mã pin</string>
    <string name="label_nhap_pass">Nhập mã pin</string>
    <string name="choose_album">Chọn Album</string>
    <string name="choose_item">Chọn ảnh</string>
    <string name="private_folder_title">Thư mục bảo mật</string>
    <string name="enter_pin_msg">Nhập mã pin để mở khoá</string>
    <string name="album_name">Album</string>
    <string name="album_name_small">Album</string>
    <string name="ngay_1_2_2021">Ngay 1/2/2021</string>
    <string name="people_name">Peopel1</string>
    <string name="language_label">Ngôn ngữ</string>
    <string name="hide_show_date">Ẩn/hiện ngày tháng</string>
    <string name="small">Bố cục ảnh nhỏ</string>
    <string name="medium">Bố cục ảnh trung bình</string>
    <string name="large">Bố cục ảnh lớn</string>
    <string name="delete_album">Xóa album</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="copy">Sao chép</string>
    <string name="move">Di chuyển</string>
    <string name="set_waller">Đặt làm hình nền</string>
    <string name="slide_show">Trình chiếu</string>
    <string name="love_folder">Yêu thích</string>
    <string name="private_folder_menu">Thư mục mật</string>
    <string name="khong_khop">Mật khẩu nhập lại không khớp</string>
    <string name="loading">Đang xử lý</string>
    <string name="photo_video">Ảnh/Video</string>
    <string name="people">Người</string>
    <string name="cancel">Hủy</string>
    <string name="language_map">vi</string>
    <string name="wrong_pass">Sai mật khẩu</string>
    <string name="hide">Ẩn đi</string>
    <string name="vn">Tiếng Việt</string>
    <string name="en">Tiếng Anh</string>
    <string name="setting_title">Thiết lập</string>
    <string name="save">Lưu</string>
    <string name="enter_album_name">Tên album</string>
    <string name="create_album_title">Tạo album</string>
    <string name="create">Tạo</string>
    <string name="light">Sáng</string>
    <string name="dark">Tối</string>
    <string name="save_location">Lưu địa điểm ?</string>
    <string name="Error" />
    <string name="error">error</string>
    <string name="none">Chưa có</string>
    <string name="choose_copy_move">Lựa chọn</string>
    <string name="unlock_string">Mở khóa</string>
    <string name="exists_album">Album đã tồn tại</string>
    <string name="setwaller">Đặt làm ảnh nền?</string>

</resources>