<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GalleryActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="center">

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/albumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom ="20dp"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:text="@string/item_detail_title"/>
    <GridLayout
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_added_date"/>
        <TextView
            android:id="@+id/added_date"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/item_detail_added_date_sample"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_name"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/item_detail_name_sample"/>
            <TextView
                android:id="@+id/specification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_detail_specification_sample"/>
        </LinearLayout>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_path"/>
        <TextView
            android:id="@+id/path"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_path_sample"/>
        <TextView
            android:id="@+id/location_label"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_location"/>
        <TextView
            android:id="@+id/location"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_detail_location_sample"/>
    </GridLayout>



</LinearLayout >