<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.GalleryActivity">
    <item
        android:id="@+id/del"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="TODO"
        app:showAsAction="always"/>
    <item
        android:id="@+id/unlock"
        android:icon="@drawable/ic_baseline_lock_open_24"
        android:title="TODO"
        app:showAsAction="always"/>
    <item
        android:id="@+id/checkAll"
        android:checkable="true"
        android:title="All"
        android:icon="@drawable/ic_outline_check_box_outline_blank_24"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom|withText" />

    <group android:id="@+id/group">
        <item
            android:id="@+id/show_hideDate"
            android:title="@string/hide_show_date"/>
        <item
            android:id="@+id/small"
            android:title="@string/small"/>
        <item
            android:id="@+id/medium"
            android:title="@string/medium"/>
        <item
            android:id="@+id/large"
            android:title="@string/large"/>
    </group>

</menu>