<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
             android:gravity="center">

        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom ="20dp"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:text="@string/setting_title"/>
        <GridLayout
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <TextView
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_label"
                tools:ignore="MissingConstraints" />
            <RadioGroup
                android:layout_weight="1"
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/vn"
                    android:checked="true"
                    android:text="@string/vn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/en"
                    android:text="@string/en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>
            <TextView
                android:layout_weight="1"
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme"
                tools:ignore="MissingConstraints" />
            <RadioGroup
                android:layout_weight="1"
                android:layout_margin="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/light"
                    android:checked="true"
                    android:text="@string/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/dark"
                    android:text="@string/dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </GridLayout>
        <Button
            android:id="@+id/save"
            android:layout_margin="40dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/save"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>